
0.07    Not Released

        Add test that the change log conforms to CPAN::Changes::Spec.

        Convert dates in change log to conform with
        CPAN::Changes::Spec.

        Require CPAN::Changes >= 0.23 for running the test suite.

        Switch to Dist::Zilla (with ExtUtils::MakeMaker) instead of
        Module::Build. Remove convenience Makefile.

        Fix Perl::Critic warning "Don't modify $_ in list functions"

        Consider Modern::Perl as ok for
        Perl::Critic::Policy::TestingAndDebugging::RequireUseStrict

        Use Travis CI for smoke testing and Coveralls.io for coverage
        reporting.

        New tests added:
        + Verify behaviour upon unknown backend parameter.

0.06    2013-07-22 20:47:16+02:00

        Bump Module::Build requirement to 0.4004 for test_requires.

        Remove all environment variables listed as relevant for taint
        mode in perlsec(1) from the affected tests.

0.05    2013-07-21 17:56:01+02:00

        Fix test skipping numbers in t/basic-functionality.t.

        Documentation deduplication.

0.04    2013-07-10 19:55:57+02:00

        New method concat.

        New helper module Run::Parts::Common.

        Run::Parts::Perl now works properly on DOS-ish platforms

        Some refactoring which pulls in new dependencies.

0.03    2013-07-05 21:01:59+02:00

        Run::Parts has been split up into frontend and backend
        modules.

        A pure Perl backend module has been added.

        Run::Parts now can either choose the appropriate backend
        itself or use a given backend.

0.02    2013-06-08 20:04:53+02:00

	Skip functionality tests if /bin/run-parts is not there or not
	executable.

	Add POD encoding to make Test::Pod happy

	State in Build.PL that the test suite needs Test::Differences and
	that Run::Parts itself needs Perl >= 5.10.

        Disable Makefile.PL compatibility.

0.01    2013-06-07 20:26:57+02:00

        Initial release. More or less a proof of concept.